--- a/src/server/server.vcxproj
+++ b/src/server/server.vcxproj
@@ -75,6 +75,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="interface\samp_event_listener.h" />
+    <ClInclude Include="interface\samp_native.h" />
+    <ClInclude Include="sdk\amx.h" />
+    <ClInclude Include="sdk\plugincommon.h" />
+    <ClInclude Include="sdk\sclinux.h" />
+    <ClInclude Include="server_interface.h" />
+    <ClInclude Include="server_interface_impl.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sdk\amxplugin.cpp" />
+    <ClCompile Include="server_interface_impl.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
