--- a/src/playground/playground.vcxproj
+++ b/src/playground/playground.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="entities\player_manager.cpp" />
     <ClCompile Include="playground.cpp" />
     <ClCompile Include="plugin.cpp" />
   </ItemGroup>
@@ -18,6 +19,7 @@
     <None Include="plugin.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="entities\player_manager.h" />
     <ClInclude Include="playground.h" />
   </ItemGroup>
   <ItemGroup>
