--- a/src/server/server.vcxproj
+++ b/src/server/server.vcxproj
@@ -75,8 +75,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="interface\samp_event_listener.h" />
-    <ClInclude Include="interface\samp_native.h" />
+    <ClInclude Include="interface\player_event_listener.h" />
+    <ClInclude Include="interface\samp\event_listener.h" />
+    <ClInclude Include="interface\samp\native.h" />
     <ClInclude Include="sdk\amx.h" />
     <ClInclude Include="sdk\plugincommon.h" />
     <ClInclude Include="sdk\sclinux.h" />
