--- a/src/server/server.vcxproj
+++ b/src/server/server.vcxproj
@@ -99,7 +99,7 @@
     <ClInclude Include="server_interface_impl.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="bindings\foo.cpp" />
+    <ClCompile Include="bindings\compile.cpp" />
     <ClCompile Include="native_arguments.cpp" />
     <ClCompile Include="native_function_manager.cpp" />
     <ClCompile Include="sdk\amxplugin.cpp" />
