Early bits of being able to use a fake AMX instance

--- a/src/server/server.vcxproj
+++ b/src/server/server.vcxproj
@@ -81,6 +81,7 @@
     <ClInclude Include="bindings\file.h" />
     <ClInclude Include="bindings\float.h" />
     <ClInclude Include="bindings\http.h" />
+    <ClInclude Include="bindings\internal\mock_amx.h" />
     <ClInclude Include="bindings\objects.h" />
     <ClInclude Include="bindings\players.h" />
     <ClInclude Include="bindings\samp.h" />
@@ -105,6 +106,7 @@
     <ClCompile Include="bindings\file.cpp" />
     <ClCompile Include="bindings\float.cpp" />
     <ClCompile Include="bindings\http.cpp" />
+    <ClCompile Include="bindings\internal\mock_amx.cpp" />
     <ClCompile Include="bindings\objects.cpp" />
     <ClCompile Include="bindings\players.cpp" />
     <ClCompile Include="bindings\samp.cpp" />
