--- a/src/launcher/launcher.vcxproj
+++ b/src/launcher/launcher.vcxproj
@@ -77,9 +77,16 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="samp_plugin.cpp" />
+    <ClCompile Include="server\native_function_delegate_impl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="samp_plugin.h" />
+    <ClInclude Include="server\native_function_delegate_impl.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\base\base.vcxproj">
+      <Project>{dc7ba198-5b47-4d2e-b1ff-83819244a048}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
