--- a/src/test_runner/launcher.vcxproj
+++ b/src/test_runner/launcher.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B7A52C24-0139-4688-A096-1AD83F7262C4}</ProjectGuid>
     <RootNamespace>launcher</RootNamespace>
+    <ProjectName>test_runner</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
