--- a/src/base/base.vcxproj
+++ b/src/base/base.vcxproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logging.h" />
+    <ClInclude Include="macros.h" />
     <ClInclude Include="version.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
