Early implementation of the services system
Services power both components and features, and are independent pieces
of the code which shouldn't require plumbing elsewhere in order to be
used.

Services have a number of requirements:
(1) They must follow a strict dependency model. Dependencies will have
to be declared within the service's header, and will be verified at both
compile and runtime.
(2) Their implementation must be strictly independent. We register them
with the ServiceManager using a static initializer. No changes should be
required elsewhere to power them.
(3) They must be testable. Creating a mocked service rather than a real
one must be easy, and must be done by the service manager.

We're not there yet, but this allows us to take the first steps towards
getting there.

--- a/src/playground/playground.vcxproj
+++ b/src/playground/playground.vcxproj
@@ -17,6 +17,8 @@
     <ClCompile Include="entities\player_servertest.cpp" />
     <ClCompile Include="playground.cpp" />
     <ClCompile Include="plugin.cpp" />
+    <ClCompile Include="services\service.cpp" />
+    <ClCompile Include="services\service_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="plugin.def" />
@@ -28,6 +30,8 @@
     <ClInclude Include="entities\player_manager.h" />
     <ClInclude Include="playground.h" />
     <ClInclude Include="services\service.h" />
+    <ClInclude Include="services\service_macros.h" />
+    <ClInclude Include="services\service_manager.h" />
     <ClInclude Include="services\service_test.h" />
   </ItemGroup>
   <ItemGroup>
