--- a/src/base/base.vcxproj
+++ b/src/base/base.vcxproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <ClInclude Include="logging.h" />
     <ClInclude Include="macros.h" />
+    <ClInclude Include="temporary_change.h" />
     <ClInclude Include="vector3d.h" />
     <ClInclude Include="version.h" />
   </ItemGroup>
