--- a/src/base/base.vcxproj
+++ b/src/base/base.vcxproj
@@ -75,6 +75,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="json\jsoncpp.cpp" />
     <ClCompile Include="logging.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="random_unittest.cpp" />
@@ -84,6 +85,8 @@
     <ClCompile Include="time_unittest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="json\json-forwards.h" />
+    <ClInclude Include="json\json.h" />
     <ClInclude Include="logging.h" />
     <ClInclude Include="macros.h" />
     <ClInclude Include="random.h" />
