--- a/src/base/base.vcxproj
+++ b/src/base/base.vcxproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <ClCompile Include="json\jsoncpp.cpp" />
     <ClCompile Include="json\json_object.cpp" />
+    <ClCompile Include="json\json_object_unittest.cpp" />
     <ClCompile Include="logging.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="random_unittest.cpp" />
