--- a/src/playground/playground.vcxproj
+++ b/src/playground/playground.vcxproj
@@ -11,6 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="communication\chat_manager.cpp" />
+    <ClCompile Include="communication\chat_manager_servertest.cpp" />
     <ClCompile Include="entities\player.cpp" />
     <ClCompile Include="entities\player_manager.cpp" />
     <ClCompile Include="entities\player_manager_servertest.cpp" />
@@ -29,6 +31,8 @@
     <None Include="plugin.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="communication\chat_event_listener.h" />
+    <ClInclude Include="communication\chat_manager.h" />
     <ClInclude Include="entities\entity.h" />
     <ClInclude Include="entities\entity_manager.h" />
     <ClInclude Include="entities\player.h" />
