--- a/src/playground/playground.vcxproj
+++ b/src/playground/playground.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="communication\chat_manager_servertest.cpp" />
     <ClCompile Include="communication\message_builder.cpp" />
     <ClCompile Include="communication\message_builder_unittest.cpp" />
+    <ClCompile Include="theme.cpp" />
     <ClCompile Include="entities\player.cpp" />
     <ClCompile Include="entities\player_manager.cpp" />
     <ClCompile Include="entities\player_manager_servertest.cpp" />
@@ -36,6 +37,7 @@
     <ClInclude Include="communication\chat_event_listener.h" />
     <ClInclude Include="communication\chat_manager.h" />
     <ClInclude Include="communication\message_builder.h" />
+    <ClInclude Include="theme.h" />
     <ClInclude Include="entities\entity.h" />
     <ClInclude Include="entities\entity_manager.h" />
     <ClInclude Include="entities\player.h" />
